--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,5 +2,7 @@
   <ul>
     <li><a class="active" href="/">Home</a></li>
     <li><a href="/random">Random Joke</a></li>
+    <li><a href="/favorite">Favorite</a></li>
+
   </ul>
 </header>
